tests/paczka1/fuzzy1/99533141.err
Error in line 1: jdA A333 67,7
Error in line 4: umNEuA A74 47,3
Error in line 8: 4hSnnnDCs A46 6,5
Error in line 15: v3IZcfAD93 A333 47,1
Error in line 21: A74 A786 46,1
Error in line 29: A74 A333 52,0
Error in line 31: v3IZcfAD93 A46 61,4
Error in line 38: 4hSnnnDCs A333 12,5
Error in line 39: 4hSnnnDCs A46 51,3
